# curatoor

./: .gitignore  DistributeONFT721.sol  ExampleUniversalONFT721.sol  IONFT721.sol  IONFT721Core.sol  ONFT.js  ONFT721A.sol  ONFT721Core.sol  README.md  UniversalONFT721.sol  docker-compose.yml  package-lock.json
.github/workflows/: lint.yml
ERC-6551/: .gitignore  hardhat.config.js  package-lock.json  package.json  secrets.json
ERC-6551/contracts/: ERC6551Account.sol  ERC6551Registry.sol  NFT.sol  Token.sol
ERC-6551/contracts/interface/: IERC6551Account.sol  IERC6551Registry.sol
ERC-6551/deploy/: 00_deploy_ERC6551Registry.js  01_deploy_Nft.js  02_deploy_ERC6551Account.js
ERC-6551/public/: USDCabi.json
ERC-6551/scripts/: Registry.js  send.js
api/: Dockerfile  pyproject.toml
api/src/: __init__.py  commands.py  db.py  views.py
contracts/: ONFT721.sol
scripts/: ONFT.js  ONFT721.js  attest.js
web_client/: Dockerfile  package-lock.json  package.json  vite.config.ts
web_client/src/: constants.ts  generated.ts  main.tsx  utils.ts
web_client/src/components/: CollectionBox.tsx  NFTBox.tsx  SearchFieldBox.tsx
web_client/src/layouts/: root.tsx
web_client/src/pages/: App.tsx  Collection.tsx  Collections.tsx  Home.tsx
web_client/src/store/: account.ts  nft.ts
